--- a/package.json
+++ b/package.json
@@ -6,15 +6,15 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Andreslav Kozlov",
   "license": "ISC",
   "devDependencies": {
     "css-loader": "^3.2.0",
     "html-webpack-inline-source-plugin": "0.0.10",
     "html-webpack-plugin": "^3.2.0",
-    "jquery": "^3.4.1",
     "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.12.0",
+    "remove-files-webpack-plugin": "^1.1.3",
     "sass-loader": "^7.3.1",
     "style-loader": "^1.0.0",
     "ts-loader": "^6.0.4",
@@ -22,9 +22,5 @@
     "url-loader": "^2.1.0",
     "webpack": "^4.39.2",
     "webpack-cli": "^3.3.7"
-  },
-  "dependencies": {
-    "@types/jquery": "^3.3.31",
-    "remove-files-webpack-plugin": "^1.1.3"
   }
 }
