--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "url-loader": "^2.1.0",
     "webpack": "^4.39.2",
     "webpack-cli": "^3.3.7"
+  },
+  "dependencies": {
+    "simplebar": "^5.1.0"
   }
 }
